tests/error/continue_out.gw
// [contains] 'continue' found outside of for/while/until
continue;
